<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilterActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <!--    ABV Filter-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abv_title"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">


            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:hint="@string/min">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/abv_min_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:hint="@string/max">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/abv_max_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </RelativeLayout>

    <!--    IBU Filter-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ibu_title"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">


            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:hint="@string/min">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ibu_min_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:hint="@string/max">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ibu_max_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </RelativeLayout>

    <!--    EBC Filter-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ebc_title"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">


            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:hint="@string/min">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ebc_min_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:hint="@string/max">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ebc_max_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </RelativeLayout>

            <!--   DATE-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brewed"/>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">


                    <com.google.android.material.textfield.TextInputLayout
                        app:boxBackgroundColor="@color/white"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:hint="@string/brewed_before">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/before_date_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        app:boxBackgroundColor="@color/white"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:hint="@string/brewed_after">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/after_date_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </RelativeLayout>

    <!--  YEAST TEXT Filter-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:hint="@string/yeast">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/yeast_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <!--  HOPS TEXT Filter-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:hint="@string/hops">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/malt_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <!--  Malts TEXT Filter-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:hint="@string/malt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hops_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <!--  FOOD TEXT Filter-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:hint="@string/food">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/food_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


    <!--  IDS TEXT Filter-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:hint="@string/ids">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ids_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">

                <Button
                    android:backgroundTint="@color/red"
                    android:layout_margin="5dp"
                    android:id="@+id/btn_reset"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:text="@string/reset"
                    android:layout_weight="1.0" />

                <Button
                    android:backgroundTint="@color/blue"
                    android:layout_margin="5dp"
                    android:id="@+id/btn_apply"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:text="@string/apply"
                    android:layout_weight="1.0" />

            </LinearLayout>
        </LinearLayout>




    </ScrollView>
</RelativeLayout>